// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> renders correctly 1`] = `
<i
  className="icon"
>
  <svg
    height="1em"
    viewBox="0 0 512 512"
    width="1em"
  >
    <line
      style={
        Object {
          "fill": "none",
          "stroke": "var(--class-color)",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": 32,
        }
      }
      x1={256}
      x2={256}
      y1={112}
      y2={400}
    />
    <line
      style={
        Object {
          "fill": "none",
          "stroke": "var(--class-color)",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": 32,
        }
      }
      x1={400}
      x2={112}
      y1={256}
      y2={256}
    />
  </svg>
</i>
`;

exports[`<Icon /> renders correctly by name 1`] = `
<i
  className="icon"
>
  <svg
    height="1em"
    viewBox="0 0 512 512"
    width="1em"
  >
    <path
      d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
      style={
        Object {
          "fill": "none",
          "stroke": "var(--class-color)",
          "strokeMiterlimit": 10,
          "strokeWidth": 32,
        }
      }
    />
    <path
      d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
      style={
        Object {
          "fill": "none",
          "stroke": "var(--class-color)",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": 32,
        }
      }
    />
    <polyline
      points="135.87 256 159.46 232.4 184.13 256"
      style={
        Object {
          "fill": "none",
          "stroke": "var(--class-color)",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": 32,
        }
      }
    />
    <polyline
      points="376.13 256 352.54 279.6 327.87 256"
      style={
        Object {
          "fill": "none",
          "stroke": "var(--class-color)",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": 32,
        }
      }
    />
  </svg>
</i>
`;

exports[`<Icon /> renders correctly with optional props 1`] = `
<i
  className="icon class -orange -small"
>
  <svg
    height="1em"
    viewBox="0 0 512 512"
    width="1em"
  >
    <line
      style={
        Object {
          "fill": "none",
          "stroke": "var(--class-color)",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": 32,
        }
      }
      x1={256}
      x2={256}
      y1={112}
      y2={400}
    />
    <line
      style={
        Object {
          "fill": "none",
          "stroke": "var(--class-color)",
          "strokeLinecap": "round",
          "strokeLinejoin": "round",
          "strokeWidth": 32,
        }
      }
      x1={400}
      x2={112}
      y1={256}
      y2={256}
    />
  </svg>
</i>
`;
